k8s-manifests/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-backend
  namespace: blog-app
  labels:
    app: blog-backend
spec:
  selector:
    app: blog-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
