k8s-manifests/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend
  namespace: blog-app
  labels:
    app: blog-frontend
spec:
  selector:
    app: blog-frontend
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30080
