k8s-manifests/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: blog-app
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: mongo
      port: 27017
      targetPort: 27017
  type: ClusterIP           # internal only — not exposed outside the cluster
